# zirconium

./: .gitignore  .gitmodules  README.md  entity_list.txt  ida_functions.txt  memory_table.ct  possible_zombie_list.txt  ptrlist.PTR  ptrlist.PTR.results.0  ptrlist.PTR.results.1  ptrlist.PTR.results.10  ptrlist.PTR.results.11  ptrlist.PTR.results.12  ptrlist.PTR.results.13  ptrlist.PTR.results.14  ptrlist.PTR.results.15  ptrlist.PTR.results.2  ptrlist.PTR.results.3  ptrlist.PTR.results.4  ptrlist.PTR.results.5  ptrlist.PTR.results.6  ptrlist.PTR.results.7  ptrlist.PTR.results.8  ptrlist.PTR.results.9  secondrun.PTR.results.1  t6zm.exe.h
codebase/: CMakeLists.txt  codebase.sln  codebase.vcxproj  codebase.vcxproj.filters  hook_dx11.cpp
codebase/includes/: globals.h  pch.h  t6zm.exe.h  zirconium_game.h  zirconium_globals.h  zirconium_hook.h  zirconium_log.h  zirconium_math.h  zirconium_memory.h  zirconium_memory_viewer.h  zirconium_overlay.h
codebase/includes/game/: zirconium_esp.h  zirconium_game.h
codebase/includes/hooks/: hook.h  vmt_hook.h  zirconium_hook.h
codebase/includes/render/: zirconium_render.h
codebase/includes/rendering/: imgui_style.h  render.h
codebase/includes/ui/: zirconium_imgui_style.h  zirconium_overlay.h
codebase/includes/utils/: logger.h  mem.h  scan_mem.h  zirconium_header_parser.h  zirconium_log.h  zirconium_math.h  zirconium_memory.h  zirconium_type_registry.h
codebase/src/: dll_main.cpp  globals.cpp  zirconium_game.cpp  zirconium_hook_dx11.cpp  zirconium_imgui_overlay.cpp  zirconium_log.cpp  zirconium_main.cpp  zirconium_memory.cpp
codebase/src/game/: zirconium_game.cpp
codebase/src/hooks/: hook.cpp  hook_dx11.cpp  hook_dx9.cpp  vmt_hook.cpp  zirconium_hook_dx11.cpp
codebase/src/rendering/: imgui_overlay.cpp  zirconium_imgui_overlay.cpp  zirconium_memory_viewer.cpp
codebase/src/utils/: logger.cpp  mem.cpp  scan_mem.cpp  zirconium_header_parser.cpp  zirconium_log.cpp  zirconium_memory.cpp  zirconium_type_registry.cpp
